[package]
name = "clash-tool"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.2"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls", "cookies"] }
rustls = "0.23.12"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
regex = "1.10.6"
chrono = "0.4.38"
encoding_rs_io = "0.1.7"
scraper = "0.20.0"
clipboard = "0.5.0"
teloxide = "0.13.0"