[package]
name = "clash-tool"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-beta.0"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls", "cookies"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
regex = "1.11.1"
encoding_rs_io = "0.1.7"
scraper = "0.21.0"