[package]
name = "clash-tool"
version = "1.0.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "cookies"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
regex = "1.11.1"
encoding_rs_io = "0.1.7"
scraper = "0.23.1"
fern = "0.7.1"
clipboard = "0.5.0"
teloxide = "0.13.0"
log = "0.4.26"
chrono = "0.4.40"